--- a/fossblox.html
+++ b/fossblox.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 	<canvas id="canvas" width="480" height="854" style="border: 1px solid #bbb;"></canvas>
+	<section id="playButton">
+		<p>
+			Play
+		</p>
+	</section>
 </body>
 </html>
