Added MainMenu button html and css

--- a/fossblox.html
+++ b/fossblox.html
@@ -4,14 +4,12 @@
 	<title>FOSSBLOX</title>
 	<meta charset="utf-8"/>
 	<meta name="authors" content="Cailin Li, David Kisluk, Peter Gyory, Will Paul"/>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/app.css"/>
 </head>
 <body>
 	<canvas id="canvas" width="480" height="854" style="border: 1px solid #bbb;"></canvas>
 	<section id="playButton">
-		<p>
-			Play
-		</p>
+		<button type="button">Play</play>
 	</section>
 </body>
 </html>
