Added gameOver to html and css

--- a/fossblox.html
+++ b/fossblox.html
@@ -33,5 +33,13 @@
 			<button type="button" id="resumeButton">Resume</button>
 		</p>
 	</section>
+	<section id="gameOver">
+		<p id="score">
+			Score:
+		</p>
+		<p>
+			<button type="button" id="mainMenuButton">Main Menu</button>
+		</p>
+	</section>
 </body>
 </html>
