--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Privileged app</title>
         <meta name="description" content="A privileged app stub">
+        <meta name="authors" content="Cailin Li, David Kisluk, Peter Gyory, Will Paul"/>
+      
+        <link rel="stylesheet" type="text/css" href="css/app.css"/>
 
         <!--
           viewport allows you to control how mobile browsers will render your content.
@@ -39,10 +42,39 @@
         <script type="text/javascript" src="js/libs/l10n.js" defer></script>
     </head>
     <body>
-        <section>
-            <h1 data-l10n-id="app_title">Privileged empty app</h1>
-            <p data-l10n-id="app_description">This app is empty. Fill it with your own stuff!</p>
-            <p id="message"></p>
-        </section>
+      <canvas id="canvas" style="border: 1px solid #bbb;"></canvas>
+      <section id="mainMenu">
+        <p>
+          <button type="button" id="playButton">Play</button>
+        </p>
+        <p>
+          <button type="button" id="optionsButton">Options</button>
+        </p>
+      </section>
+      <section id="optionsMenu">
+        <p>
+          <label for="speedSlider">Falling Speed</label>
+          <input id="speedSlider" type="range" min="1" max="5" step="1" value="1"/>
+        </p>
+        <p>
+          <label for="frequencySlider">Blox Spawn Frequency</label>
+          <input id="frequencySlider" type="range" min="1" max="5" step="1" value="1"/>
+        </p>
+        <p>
+          <label for="musicCheckbox">Toggle Music</label>
+          <input type="checkbox" id="musicCheckbox">
+        </p>
+        <p>
+          <button type="button" id="resumeButton">Resume</button>
+        </p>
+      </section>
+      <section id="gameOver">
+        <p id="score">
+          Score:
+        </p>
+        <p>
+          <button type="button" id="mainMenuButton">Main Menu</button>
+        </p>
+      </section>
     </body>
 </html>
