Trying to get something drawn
Added an init to main, and added a draw state for the gameScreen in
render. changed foss2d so that it worked(variables not right) added to
the gameScreen update state

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         Read about defer: https://developer.mozilla.org/Web/HTML/Element/script#attr-defer
         -->
         <script type="text/javascript" src="js/app.js" defer></script>
-
+		<script type="text/javascript" src="js/foss2d.js" defer></script>
+		<script type="text/javascript" src="js/states.js" defer></script>
+		<script type="text/javascript" src="js/main.js" defer></script>
         <!--
         The following two lines are for loading the localisations library
         and the localisation data-so people can use the app in their
