--- a/fossblox.html
+++ b/fossblox.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>FOSSBLOX</title>
-	<meta charset="utf-8"/>
-	<meta name="authors" content="Cailin Li, David Kisluk, Peter Gyory, Will Paul"/>
-	<link rel="stylesheet" type="text/css" href="css/app.css"/>
-</head>
-<body>
-	<canvas id="canvas" width="480" height="854" style="border: 1px solid #bbb;"></canvas>
-	<section id="mainMenu">
-		<p>
-			<button type="button" id="playButton">Play</button>
-		</p>
-		<p>
-			<button type="button" id="optionsButton">Options</button>
-		</p>
-	</section>
-	<section id="optionsMenu">
-		<p>
-			<label for="speedSlider">Falling Speed</label>
-			<input id="speedSlider" type="range" min="1" max="5" step="1" value="1"/>
-		</p>
-		<p>
-			<label for="frequencySlider">Blox Spawn Frequency</label>
-			<input id="frequencySlider" type="range" min="1" max="5" step="1" value="1"/>
-		</p>
-		<p>
-			<label for="musicCheckbox">Toggle Music</label>
-			<input type="checkbox" id="musicCheckbox">
-		</p>
-		<p>
-			<button type="button" id="resumeButton">Resume</button>
-		</p>
-	</section>
-	<section id="gameOver">
-		<p id="score">
-			Score:
-		</p>
-		<p>
-			<button type="button" id="mainMenuButton">Main Menu</button>
-		</p>
-	</section>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Privileged app</title>
+        <meta name="description" content="A privileged app stub">
+        <meta name="authors" content="Cailin Li, David Kisluk, Peter Gyory, Will Paul"/>
+      
+        <link rel="stylesheet" type="text/css" href="css/app.css"/>
+
+        <!--
+          viewport allows you to control how mobile browsers will render your content.
+          width=device-width tells mobile browsers to render your content across the
+          full width of the screen, without being zoomed out (by default it would render
+          it at a desktop width, then shrink it to fit.)
+          Read more about it here:
+          https://developer.mozilla.org/Mozilla/Mobile/Viewport_meta_tag
+        -->
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="css/app.css">
+
+        <!--
+        Inline JavaScript code is not allowed for privileged and certified apps,
+        due to Content Security Policy restrictions.
+        You can read more about it here: https://developer.mozilla.org/Apps/CSP
+        Plus keeping your JavaScript separated from your HTML is always a good practice!
+
+        We're also using the 'defer' attribute. This allows us to tell the browser that
+        it should not wait for this file to load before continuing to load the rest of
+        resources in the page. Then, once everything has been loaded, it will parse and
+        execute the deferred files.
+        Read about defer: https://developer.mozilla.org/Web/HTML/Element/script#attr-defer
+        -->
+        <script type="text/javascript" src="js/app.js" defer></script>
+		<script type="text/javascript" src="js/foss2d.js" defer></script>
+		<script type="text/javascript" src="js/states.js" defer></script>
+		<script type="text/javascript" src="js/main.js" defer></script>
+        <!--
+        The following two lines are for loading the localisations library
+        and the localisation data-so people can use the app in their
+        own language (as long as you provide translations).
+        -->
+        <link rel="prefetch" type="application/l10n" href="data/locales.ini" />
+        <script type="text/javascript" src="js/libs/l10n.js" defer></script>
+    </head>
+    <body>
+      <canvas id="canvas" style="border: 1px solid #bbb;"></canvas>
+    </body>
 </html>
