Final horrid mess
It adds stuff and generally works a little

--- a/fossblox.html
+++ b/fossblox.html
@@ -33,6 +33,7 @@
         -->
         <script type="text/javascript" src="js/app.js" defer></script>
 		<script type="text/javascript" src="js/foss2d.js" defer></script>
+		<script type="text/javascript" src="js/matching.js" defer></script>
 		<script type="text/javascript" src="js/states.js" defer></script>
 		<script type="text/javascript" src="js/main.js" defer></script>
         <!--
